--- a/style.css
+++ b/style.css
@@ -1,15 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+
+:root {
+    --primary-color: #d40000;
+    --secondary-color: #313131;
+    --accent-color: #e2d9d7;
+    --low-accent-color: #636363;
+    --low-accent-color-rgb: 99, 99, 99;
+    --terc-color: #ebdad7;
+    --quaternary-color: #242424;
+    --border-radius: 20px;
+    --search-padding: 12px;
+}
+
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
+    background-color: var(--secondary-color);
+    color: var(--accent-color);
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: poppins;
 }
 
 h1 {
-    background-color: #ff0000;
-    color: #fff;
+    background-color: var(--primary-color);
+    color: var(--accent-color);
     padding: 20px;
     margin: 0;
     text-transform: uppercase;
@@ -26,9 +42,9 @@ h1 {
 }
 
 .character-card {
-    background-color: #fff;
-    color: #000;
-    border: 2px solid #ff0000;
+    background-color: var(--terc-color);
+    color: var(--primary-color);
+    border: 1px solid #000;
     border-radius: 10px;
     text-align: center;
     overflow: hidden;
@@ -38,60 +54,91 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+
+
+    && > div {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        word-break: break-word;
+    }
 }
 
 .character-card:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 12px rgba(255, 0, 0, 0.5);
+    box-shadow: 0 8px 12px rgba(var(--primary-color-rgb), 0.5);
 }
 
 .character-card img {
     width: 100%;
     height: 150px; 
     object-fit: cover; 
-    border-bottom: 2px solid #ff0000;
+    border-bottom: 2px solid var(--primary-color);
     border-radius: 4px 4px 0 0;
-    margin-bottom: 10px;
 }
 
 .character-card span {
     display: block;
     font-size: 1.2rem;
     font-weight: bold;
-    color: #ff0000;
+    color: var(--primary-color);
+}
+
+.search-bar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    border-radius: var(--border-radius);
+    margin: 60px 0 20px 0;
+    width: fit-content;
+    background-color: var(--quaternary-color);
 }
 
 .search-bar input {
-    width: 300px;
-    padding: 10px;
-    border: 2px solid #ff0000;
-    border-radius: 4px;
+    width: 400px;
+    padding: var(--search-padding);
+    border: none;
     outline: none;
     font-size: 16px;
+    border-radius: var(--border-radius);
+    background-color: transparent;
+    caret-color: var(--accent-color);
+    color: var(--accent-color);
+    
+    &&::placeholder {
+        color: var(--low-accent-color);
+    }
 }
 
 .search-bar button {
-    padding: 10px 15px;
-    margin-left: 10px;
-    background-color: #ff0000;
-    color: #fff;
+    background-color: transparent;
+    padding: var(--search-padding) 0;
+    width: 50px;
+    color: var(--secondary-color);
     border: none;
-    border-radius: 4px;
+    border-radius: 0 var(--border-radius) var(--border-radius) 0;
+    border-left: 2px solid var(--low-accent-color);
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.2s;
 }
 
+.search-bar button svg {
+    width: 20px;
+    height: 20px;
+    fill: var(--accent-color);
+}
+
 .search-bar button:hover {
-    background-color: #b71c1c;
+    background-color: rgba(var(--low-accent-color-rgb), 0.4);
 }
 
 @media (max-width: 768px) {
@@ -103,7 +150,6 @@ h1 {
     .character-card {
         width: 180px; 
         height: 280px; 
-        padding: 10px;
     }
 
     .character-card span {
@@ -119,10 +165,49 @@ h1 {
     .character-card {
         width: 150px;
         height: 250px; 
-        padding: 8px;
     }
 
     .character-card span {
         font-size: 0.9rem;
     }
 }
+/* Botão Geral */
+button {
+    background-color: var(--primary-color);
+    border: none;
+    padding: 12px 24px;
+    font-size: 1rem;
+    font-weight: bold;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    gap: 20px;
+}
+
+button:disabled {
+    background-color: var(--low-accent-color);
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+button:hover:not(:disabled) {
+    background-color: var(--primary-color);
+    transform: scale(1.1);
+}
+
+button.prev {
+    background-color: var(--primary-color);
+    color: var(--accent-color);
+    margin-right: 20px
+}
+
+button.prev:disabled {
+    background-color: var(--low-accent-color);
+}
+
+button.next {
+    background-color: var(--primary-color);
+    color: var(--accent-color);
+    margin-left: 20px;
+}
+
